# COMP765-Assignment1

./: README.md  feature_matching.cpp  localizer_node.cpp
devel/: .catkin  .rosinstall  setup.sh
src/aqua_gait/: CMakeLists.txt
src/aqua_gait/.hg/: dirstate  hgrc
src/aqua_gait/.hg/cache/: branch2-base
src/aqua_gait/.hg/store/: 00changelog.i  00manifest.i  fncache
src/aqua_gait/.hg/store/data/: _c_make_lists.txt.i  _l_i_c_e_n_s_e.i  package.xml.i  ~2ehgignore.i
src/aqua_gait/.hg/store/data/launch/: aqua__pool__learn__drift__policy.launch.i  aqua__pool__play__drift__policy.launch.i  aqua__pool__test__plc.launch.i  learn__drift__policy.launch.i  learn__drift__policy__headless.launch.i  learn__rbf__policy.launch.i  plc__demo.launch.i  test__aqua__state__reparameterizer.launch.i  test__playback.launch.i
src/aqua_gait/.hg/store/data/matlab/: _a_n_a_l_y_z_e___f_l_e_x_i_b_l_e___s_i_n_e.m.i  _p_l_o_t___a_n_i_m_a_t_e_d___l_e_g___c_o_m_m_a_n_d_s.m.i  analyze_drift_learning_bag.m.i  sample_sinusoidal_commands.m.i
src/aqua_gait/.hg/store/data/misc/: hammer.mp3.d  hammer.mp3.i  initial__policy.h5.i  start__rl__controller.sh.i
src/aqua_gait/include/aqua_gait/: Gaits.hpp  QTestGaitsGUI.hpp
src/aqua_gait/launch/: aqua_pool_learn_drift_policy.launch  aqua_pool_play_drift_policy.launch  aqua_pool_test_plc.launch  learn_drift_policy.launch  learn_drift_policy_headless.launch  learn_rbf_policy.launch  plc_demo.launch  test_aqua_state_reparameterizer.launch  test_playback.launch
src/aqua_gait/matlab/: ANALYZE_FLEXIBLE_SINE.m  PLOT_ANIMATED_LEG_COMMANDS.m  analyzeDriftLearningBag.m  sampleSinusoidalCommands.m
src/aqua_gait/misc/: initial_policy.h5  start_rl_controller.sh
src/aqua_gait/nodes/: LegChoreographies.py  aqua_hammer_bot_node.py  aqua_state_reparameterizer.py  cmd_pub_gui.py  drift_common.py  drift_critic.py  drift_learner.py  drift_learning_bag2mat.py  drift_policies.db  drift_policy.py  naive_drift_policy_controller.py  parse_rd_anqi_log.py  playback_policy_critic.py  plc_ap_marshall.py  plc_demo.py  publish_aqua_slinky.py  publish_simple_sin_sample.py  rbf_common.py  rbf_learner.py  rbf_learning_bag2mat.py  test_aqua_choreography_to_mat.py  test_single_leg_choreography_to_mat.py
src/aqua_gait/src/: Gaits.cpp  hover_midoff_node.cpp  test_gaits_gui.cpp  test_gaits_term.cpp
src/aqua_gazebo/: CMakeLists.txt  LICENSE  README.md  package.xml
src/aqua_gazebo/.hg/: dirstate  hgrc
src/aqua_gazebo/.hg/cache/: branch2-base
src/aqua_gazebo/.hg/store/: 00changelog.i  00manifest.i  fncache
src/aqua_gazebo/.hg/store/data/: _c_make_lists.txt.i  _l_i_c_e_n_s_e.i  _r_e_a_d_m_e.md.i  package.xml.i
src/aqua_gazebo/cfg/: Hydrodynamics.cfg
src/aqua_gazebo/include/aqua_gazebo/: aqua_flippers_plugin.h  aqua_hardware_emulator.h  aqua_hydrodynamics_plugin.h
src/aqua_gazebo/launch/: aqua.launch  aqua_world.launch  headless.launch
src/aqua_gazebo/materials/: reef.material
src/aqua_gazebo/msg/: HydrodynamicsParams.msg  HydrodynamicsParamsList.msg  ThrustParams.msg
src/aqua_gazebo/src/: aqua_command_repeater.py  aqua_flippers_plugin.cpp  aqua_hardware_emulator.cpp  aqua_hydrodynamics_plugin.cpp
src/aqua_gazebo/urdf/: aqua_gazebo.urdf.xacro  aqua_plugins.urdf.xacro
src/aqua_gazebo/worlds/: aqua.world  headless.world
src/aquaautopilot/: .hgignore  CMakeLists.txt  package.xml
src/aquaautopilot/.hg/: dirstate  hgrc
src/aquaautopilot/.hg/cache/: branch2-base
src/aquaautopilot/.hg/store/: 00changelog.i  00manifest.i  fncache
src/aquaautopilot/.hg/store/data/: .hgignore.i  _c_make_lists.txt.i  _l_i_c_e_n_s_e.i  mainpage.dox.i  manifest.xml.i  package.xml.i  rosdep.yaml.i
src/aquaautopilot/launch/: auto.launch  auto_helpers.launch  auto_roll_only.launch  auto_with_logger.launch  auto_wo_depth_filter.launch  choreography1.launch  choreography2.launch  depth_d_linesearch.launch  depth_p_linesearch.launch  flat_shape_swim.launch  flat_straight_swim.launch  gradient.launch  knife.launch  logger.launch  pitch_p_linesearch.launch  roll_const_linesearch.launch  roll_d_linesearch.launch  roll_p_linesearch.launch  ship_only.launch  ship_program.launch  sideA.launch  sideD.launch  slerp.launch  straight_with_dz.launch  tag_trajectory_record.launch  trajectory1.launch  trajectory2.launch  yaw_p_linesearch.launch
src/aquaautopilot/scripts/: QUAT_2_RPY_bt.m  analysedata.m  autopilot_client.py  choreography1.py  choreography2.py  compute_tracking_errors.m  corkscrew.py  coverage_ap_controller.py  display_depth.sh  display_pitch_angles.sh  display_pitch_angles_depth.sh  display_pitch_filter.sh  display_roll_angles.sh  display_roll_filter.sh  display_yaw_angles.sh  display_yaw_filter.sh  do_error_summary_graph.m  extract_csv_from_bag.sh  grid_param_search.py  grid_param_search_angles.py  grid_param_search_depth.py  iros2014_analysis.m  iros_2014_steady_state.m  knife.py  lateral.py  lateral_angles.py  loadAPBagData.m  loop_dance.py  phils_analyse_data.m  plot_ap_bag_data.m  publish_one_pose_stamped.sh  send_test_targets.py  shape_ap_controller.py  ship_program.py  show_roll.sh  show_yaw_angle.sh  somersault.py  straight.py  straight_with_dz.py  tag_trajectory.py  (+2 more)
src/aquaautopilot/src/: local_autopilot_node.cpp
src/aquaautopilot/trajectories/: traj1.p  traj1.yaml
src/aquaautopilot/trajectories/legacy/: traj1.yaml  traj1_run_on_jan13.yaml  traj2_run_on_jan13.yaml
src/aquaautopilot/trajectories/old_trajectories/: davids_first_try_jan11_different_tag_mapping.yaml
src/aquaautopilot/trajectories/old_trajectories/JollyRogerJan152014/: 2014-01-12-17-13-24.bag  outputVideo.avi  traj1.yaml  traj2.yaml
src/aquadepth/: .hgignore  CMakeLists.txt  package.xml
src/aquadepth/.hg/: dirstate  hgrc
src/aquadepth/.hg/cache/: branch2-base
src/aquadepth/.hg/store/: 00changelog.i  00manifest.i  fncache
src/aquadepth/.hg/store/data/: _c_make_lists.txt.i  _l_i_c_e_n_s_e.i  package.xml.i  ~2ehgignore.i
src/aquadepth/cfg/: DepthFilter.cfg
src/aquadepth/launch/: tweak_depth_filter.launch
src/aquadepth/nodes/: depth_filter.py  state2depth.py
src/aquadepth/src/: DepthFilterNode.cpp
(+534 files in other folders)
