<?xml version="1.0"?>
<package>
  <name>aqua_gazebo</name>
  <version>1.0.0</version>
  <description>The aqua_gazebo package</description>

  <license>BSD</license>
  <author email="gamboa@cim.mcgill.ca">Juan Camilo Gamboa Higuera</author>
  <maintainer email="gamboa@cim.mcgill.ca">Juan Camilo Gamboa Higuera</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aquacore</build_depend>
  <build_depend>aqua_gait</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>aqua_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>aquacore</run_depend>
  <run_depend>aqua_gait</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>aqua_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}"
        gazebo_model_path="${prefix}/.." />
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
