<?xml version="1.0"?>
<package>
  <name>aquadepth</name>
  <version>1.0.0</version>
  <description>Depth filtering node.</description>

  <license>BSD</license>
  <author email="anqixu@cim.mcgill.ca">Anqi Xu</author>
  <maintainer email="anqixu@cim.mcgill.ca">Anqi Xu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aquacore</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>aquacore</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
